# yara

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: 2026-03-26.excalidraw  arize_plan.md  bug; plan-create-wizard-whitespace.md  bug_ingestion_cache_fail.md  claude_code_review.md  claude_plan.md  command-hilite.md  ingestion-improvements.md  pgvector_docker_setup.md  routing_brainstorm(claude).md  sources_plan.md  temp.mermaid  todo.md
docs/planning/: 2026-03-26.excalidraw  bug_ingestion_cache_fail.md  erd_and_database_updates.md  file-storage-brainstorm.md  ingestion_logging.md  logging_plan.md  more_ui_improvements.md  pgvector_docker_setup.md  plan-query-into-conversation.md  projects_ui.md  pytest_plan.md  router_plan.md  routing.mermaid  sources_plan.md  streaming_plan.md
src/yara/: config.py  main.py  openai_client.py  openai_embedding.py  types.py
src/yara/cli/: chat_ui.py  colors.py  commands.py  startup_ui.py  ui_helpers.py
src/yara/db/: load_embeddings.py  pgvector.py  setup_db.py
src/yara/services/: chunk.py  conversation.py  get_chunks.py  handlers.py  ingest.py  openai_client.py  openai_embedding.py  query.py  router.py  scratch.sql
tests/: test_commands.py
