[project]
name = "yara"
version = "0.0.1"
description = "Yet Another RAG App"
authors = [
    {name = "SValenziano",email = "senorvalenz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "openai (>=2.30.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "docling (>=2.82.0,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "arize-phoenix-otel",
    "openinference-instrumentation-openai"
]


[tool.poetry]
packages = [{include = "yara", from = "src"}]


[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
